--- a/car-change.html
+++ b/car-change.html
@@ -17,10 +17,21 @@
 </head>
 
 <body class="!font-inter">
-    <section class="bg-white py-20">
+    <div class="view border-y z-30 border-[#E5E5E5] py-6 md:hidden block md:relative sticky top-0 inset-x-0 bg-white ">
+        <a href="" class="flex items-center gap-4 uppercase text-[#121212] text-lg font-medium">
+            <span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="9" height="15" viewBox="0 0 9 15" fill="none">
+                    <path d="M6.99902 13.412L1 7.41299L6.99902 1.41397" stroke="#121212" stroke-width="1.99967"
+                        stroke-linecap="square" stroke-linejoin="round" />
+                </svg>
+            </span>
+            Change Car
+        </a>
+    </div>
+    <section class="bg-white md:py-20 py-6 pb-20">
         <div class="w-full flex flex-col gap-y-6">
             <div class="w-full group/services">
-                <div class="max-md:pb-3 border-b border-[#E5E7EB]">
+                <div class="max-md:pb-3 border-b border-[#E5E7EB] md:block hidden">
                     <div class="view w-full flex whitespace-nowrap max-md:overflow-x-auto">
                         <label for="carService"
                             class="group/serviceTab cursor-pointer py-4 px-10 flex flex-col items-center gap-3 justify-center text-sm font-medium border-b-4 border-transparent has-[:checked]:border-[#980D22] has-[:checked]:font-bold has-[:checked]:text-[#CB122D]">
@@ -688,20 +699,20 @@
                         </label>
                     </div>
                 </div>
-                <div class="view w-full pt-12">
+                <div class="view w-full md:pt-12">
                     <div class="flex md:flex-row flex-col gap-6 relative">
-                        <div class="md:w-[70%] w-full">
+                        <div class="md:w-[70%] w-full md:block hidden">
                             <div class="group-has-[#carService:checked]/services:flex hidden h-full">
                                 <div class="flex flex-col md:gap-y-12 gap-y-8">
                                     <div
                                         class="w-full flex flex-col gap-y-6 bg-white border border-[#E5E7EB] shadow-[0_2px_4px_-2px_#0000001A]">
                                         <div class="flex md:flex-row flex-col gap-3">
                                             <div class="md:w-2/5 w-full relative">
-                                                <img fetchpriority="low" loading="lazy" src="img/ImageWithFallback.webp"
-                                                    class="size-full" alt="" title="">
-                                                <div class="absolute -top-[1.313rem] -left-[1.188rem]">
+                                                <img fetchpriority="low" loading="lazy" src="img/ImageWithFallback.webp" width="189" height="189"
+                                                    class="size-full aspect-square" alt="" title="">
+                                                <div class="absolute -top-[3.2rem] -left-[3rem]">
                                                     <img fetchpriority="low" loading="lazy" src="img/limitedOffer.webp"
-                                                        class="w-[8.75rem] h-auto" alt="" title="">
+                                                        class="h-[14.75rem] w-auto object-contain aspect-square" alt="" title="">
                                                 </div>
                                             </div>
                                             <div class="w-3/5 w-full">
@@ -949,10 +960,10 @@
                                         <div class="flex md:flex-row flex-col gap-3">
                                             <div class="md:w-2/5 w-full relative">
                                                 <img fetchpriority="low" loading="lazy" src="img/ImageWithFallback.webp"
-                                                    class="size-full" alt="" title="">
-                                                <div class="absolute -top-[1.313rem] -left-[1.188rem]">
+                                                    class="size-full aspect-square"  width="189" height="189" alt="" title="">
+                                                <div class="absolute -top-[3.2rem] -left-[3rem]">
                                                     <img fetchpriority="low" loading="lazy"
-                                                        src="img/fiftyPercentOff.webp" class="w-[8.75rem] h-auto" alt=""
+                                                        src="img/fiftyPercentOff.webp" class="h-[14.75rem] w-auto object-contain aspect-square" alt=""
                                                         title="">
                                                 </div>
                                             </div>
@@ -1226,10 +1237,10 @@
                                         <div class="flex md:flex-row flex-col gap-3">
                                             <div class="md:w-2/5 w-full relative">
                                                 <img fetchpriority="low" loading="lazy" src="img/ImageWithFallback.webp"
-                                                    class="size-full" alt="" title="">
-                                                <div class="absolute -top-[1.313rem] -left-[1.188rem]">
+                                                    class="size-full aspect-square" width="189" height="189" alt="" title="">
+                                                <div class="absolute -top-[3.2rem] -left-[3rem]">
                                                     <img fetchpriority="low" loading="lazy" src="img/bestOffer.webp"
-                                                        class="w-[8.75rem] h-auto" alt="" title="">
+                                                        class="h-[14.75rem] w-auto object-contain aspect-square" alt="" title="">
                                                 </div>
                                             </div>
                                             <div class="w-3/5 w-full">
@@ -1501,14 +1512,14 @@
                             </div>
                         </div>
                         <div class="md:w-[30%] w-full">
-                            <div class="w-full flex flex-col bg-white shadow-[0_2px_4px_-2px_#919191] md:sticky top-6">
+                            <div class="w-full flex flex-col bg-white md:shadow-[0_2px_4px_-2px_#919191] md:sticky md:top-12 overflow-y-auto duration-500">
                                 <div
-                                    class="w-full flex items-center h-[3.125rem] p-6 bg-gradient-to-l  from-[#CB122D] to-[#650916] lg:text-xl md:text-lg text-base font-bold italic text-white uppercase">
+                                    class="w-full md:flex hidden items-center h-[3.125rem] p-6 bg-gradient-to-l  from-[#CB122D] to-[#650916] lg:text-xl md:text-lg text-base font-bold italic text-white uppercase">
                                     Your Cart
                                 </div>
-                                <div class="flex flex-col gap-y-6 bg-white p-6">
+                                <div class="flex flex-col gap-y-6 md:bg-white md:p-6">
                                     <div
-                                        class="w-full flex flex-row justify-between bg-white border border-[#EFEFEF] p-6">
+                                        class="w-full md:flex hidden flex-row justify-between bg-white border border-[#EFEFEF] p-6">
                                         <div class="flex flex-row gap-2">
                                             <span
                                                 class="bg-gradient-to-br from-[#CB122D] to-[#980D22] shadow-[0_2px_4px_-2px_#0000001A] size-[3.438rem] rounded-full flex justify-center items-center">
@@ -1611,14 +1622,13 @@
                                         </div>
                                     </div>
                                     <form action="" class="flex flex-col gap-y-6">
-
                                         <!-- Car Brand Dropdown -->
                                         <div class="w-full relative">
                                             <label for=""
                                                 class="font-semibold md:text-base text-sm text-[#6B6B6B]">Brand</label>
                                             <div class="relative mt-2">
                                                 <input type="text" placeholder="Car Brand" id="brandInput" readonly=""
-                                                    class="w-full px-4 py-3 text-black bg-white border border-[#E3E3E3] placeholder:text-black xl:placeholder:text-base xl:placeholder:text-sm focus:outline-none cursor-pointer">
+                                                    class="w-full px-4 py-3 text-black bg-white border border-[#E3E3E3] placeholder:text-black xl:placeholder:text-base xl:placeholder:text-sm focus:outline-none cursor-pointer md:rounded-none rounded-lg">
                                                 <span id="brandIcon"
                                                     class="absolute right-3 top-1/2 transform -translate-y-1/2">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -1695,7 +1705,7 @@
                                             <div class="relative mt-2">
                                                 <input type="text" placeholder="Car Model (Select Car Brand first)"
                                                     id="modelInput" readonly=""
-                                                    class="w-full px-4 py-3 text-gray-800 bg-white border border-[#E3E3E3] placeholder:text-black/50 xl:placeholder:text-base xl:placeholder:text-sm focus:outline-none cursor-pointer">
+                                                    class="w-full px-4 py-3 text-gray-800 bg-white border border-[#E3E3E3] placeholder:text-black/50 xl:placeholder:text-base xl:placeholder:text-sm focus:outline-none cursor-pointer md:rounded-none rounded-lg">
                                                 <span id="modelIcon"
                                                     class="absolute right-3 top-1/2 transform -translate-y-1/2">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -1746,7 +1756,7 @@
                                                 Type</label>
                                             <div class="relative mt-2">
                                                 <input type="text" placeholder="Fuel Type" id="fuelInput" readonly=""
-                                                    class="w-full px-4 py-3 text-gray-800 bg-white border border-[#E3E3E3] placeholder:text-black/50 xl:placeholder:text-base xl:placeholder:text-sm focus:outline-none cursor-pointer">
+                                                    class="w-full px-4 py-3 text-gray-800 bg-white border border-[#E3E3E3] placeholder:text-black/50 xl:placeholder:text-base xl:placeholder:text-sm focus:outline-none cursor-pointer md:rounded-none rounded-lg">
                                                 <span id="fuelIcon"
                                                     class="absolute right-3 top-1/2 transform -translate-y-1/2">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -1873,12 +1883,12 @@
                                         </div>
                                     </form>
                                     <div
-                                        class="bg-[#F9F9F9] border border-[#EFEFEF] text-[#6B6B6B] font-normal text-xs p-4">
+                                        class="bg-[#F9F9F9] md:grow-0 grow border border-[#EFEFEF] text-[#6B6B6B] font-normal text-xs p-4">
                                         Updating your vehicle will refresh service availability and pricing.
                                     </div>
-                                    <div class="w-full">
+                                    <div class="w-full md:relative fixed bottom-0 inset-x-0 md:bg-transparent bg-white md:shadow-none shadow-[0_25px_-50px_12px_#00000040] border-t md:border-transparent border-[#E5E7EB] md:h-auto h-[4.563rem] md:p-0 p-6 flex justify-center items-center">
                                         <button type="button"
-                                            class="h-[3.438rem] w-full bg-[#CB122D] text-base flex justify-center items-center text-white font-bold hover:bg-[#650916] duration-500">
+                                            class="h-[3.438rem] md:rounded-none rounded-lg w-full bg-[#CB122D] text-base flex justify-center items-center text-white font-bold hover:bg-[#650916] duration-500">
                                             Confirm Vehicle Update
                                         </button>
                                     </div>
@@ -1890,6 +1900,7 @@
             </div>
         </div>
     </section>
+
 
 
 
