--- a/estimator.html
+++ b/estimator.html
@@ -694,14 +694,14 @@
                             <div class="group-has-[#carService:checked]/services:flex hidden h-full">
                                 <div class="flex flex-col md:gap-y-12 gap-y-8">
                                     <div
-                                        class="w-full flex flex-col gap-y-6 bg-white border border-[#E5E7EB] shadow-[0_2px_4px_-2px_#0000001A]">
+                                        class="w-full flex flex-col gap-y-6 md:rounded-none rounded-lg bg-white border border-[#E5E7EB] shadow-[0_2px_4px_-2px_#0000001A]">
                                         <div class="flex md:flex-row flex-col gap-3">
                                             <div class="md:w-2/5 w-full relative">
                                                 <img fetchpriority="low" loading="lazy" src="img/ImageWithFallback.webp"
-                                                    class="size-full" alt="" title="">
-                                                <div class="absolute -top-[1.313rem] -left-[1.188rem]">
+                                                    class="size-full md:rounded-none rounded-lg aspect-square" width="189" height="189" alt="" title="">
+                                                <div class="absolute -top-[3.2rem] -left-[3rem]">
                                                     <img fetchpriority="low" loading="lazy" src="img/limitedOffer.webp"
-                                                        class="w-[8.75rem] h-auto" alt="" title="">
+                                                        class="h-[14.75rem] w-auto object-contain" alt="" title="">
                                                 </div>
                                             </div>
                                             <div class="w-3/5 w-full">
@@ -944,14 +944,14 @@
                                         </div>
                                     </div>
                                     <div
-                                        class="w-full flex flex-col gap-y-6 bg-white border border-[#E5E7EB] shadow-[0_2px_4px_-2px_#0000001A]">
+                                        class="w-full flex flex-col md:rounded-none rounded-lg gap-y-6 bg-white border border-[#E5E7EB] shadow-[0_2px_4px_-2px_#0000001A]">
                                         <div class="flex md:flex-row flex-col gap-3">
                                             <div class="md:w-2/5 w-full relative">
                                                 <img fetchpriority="low" loading="lazy" src="img/ImageWithFallback.webp"
-                                                    class="size-full" alt="" title="">
-                                                <div class="absolute -top-[1.313rem] -left-[1.188rem]">
+                                                    class="size-full md:rounded-none rounded-lg aspect-square" width="189" height="189" alt="" title="">
+                                                <div class="absolute -top-[3.2rem] -left-[3rem]">
                                                     <img fetchpriority="low" loading="lazy"
-                                                        src="img/fiftyPercentOff.webp" class="w-[8.75rem] h-auto" alt=""
+                                                        src="img/fiftyPercentOff.webp" class="h-[14.75rem] w-auto object-contain" alt=""
                                                         title="">
                                                 </div>
                                             </div>
@@ -1220,14 +1220,14 @@
                                         </div>
                                     </div>
                                     <div
-                                        class="w-full flex flex-col gap-y-6 bg-white border border-[#E5E7EB] shadow-[0_2px_4px_-2px_#0000001A]">
+                                        class="w-full flex flex-col md:rounded-none rounded-lg gap-y-6 bg-white border border-[#E5E7EB] shadow-[0_2px_4px_-2px_#0000001A]">
                                         <div class="flex md:flex-row flex-col gap-3">
                                             <div class="md:w-2/5 w-full relative">
                                                 <img fetchpriority="low" loading="lazy" src="img/ImageWithFallback.webp"
-                                                    class="size-full" alt="" title="">
-                                                <div class="absolute -top-[1.313rem] -left-[1.188rem]">
-                                                    <img fetchpriority="low" loading="lazy" src="img/bestOffer.webp"
-                                                        class="w-[8.75rem] h-auto" alt="" title="">
+                                                    class="size-full md:rounded-none rounded-lg aspect-square"  width="189" height="189" alt="" title="">
+                                                <div class="absolute -top-[3.2rem] -left-[3rem]">
+                                                    <img fetchpriority="low" loading="lazy" src="img/bestOffer.webp" 
+                                                        class="h-[14.75rem] w-auto object-contain" alt="" title="">
                                                 </div>
                                             </div>
                                             <div class="w-3/5 w-full">
@@ -1497,7 +1497,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="md:w-[30%] w-full">
+                        <div class="md:w-[30%] w-full md:block hidden">
                             <div class="w-full flex flex-col bg-white shadow-[0_2px_4px_-2px_#919191] md:sticky top-6">
                                 <div
                                     class="w-full flex items-center h-[3.125rem] p-6 bg-gradient-to-l  from-[#CB122D] to-[#650916] lg:text-xl md:text-lg text-base font-bold italic text-white uppercase">
