--- a/otp.html
+++ b/otp.html
@@ -18,7 +18,7 @@
 
 <body class="!font-inter">
     <header
-        class="w-full md:flex hidden justify-center items-center top-0 right-0 lg:bg-transparent bg-white font-poppins fixed z-40 h-24">
+        class="w-full md:flex hidden justify-center items-center top-0 right-0  bg-white font-poppins fixed z-40 h-24 border-b border-[#E5E7EB]">
         <div class="view w-full relative flex justify-between items-center">
             <div class="md:w-1/4 h-[4.125rem] relative flex  py-5 bg-white -skew-x-[18deg] origin-top">
                 <a href="#" class="lg:w-auto w-auto flex items-center skew-x-[18deg] h-full">
@@ -33,8 +33,7 @@
                 <div class="flex items-center justify-center">
                     <div class="flex items-center gap-3">
                         <div class="flex flex-col items-center">
-                            <span
-                                class="text-[#20BD99] font-medium text-sm tracking-wide border-b-2 border-[#20BD99] pb-1">
+                            <span class="text-[#20BD99] font-medium text-sm tracking-wide border-b-2 border-[#20BD99]">
                                 VERIFY
                             </span>
                         </div>
@@ -66,7 +65,7 @@
         </div>
     </header>
 
-    <div class="view border-b border-t border-[#E5E5E5] py-6 md:hidden block">
+    <div class="view border-y z-30 border-[#E5E5E5] py-6 md:hidden block md:relative sticky top-0 inset-x-0 bg-white ">
         <a href="" class="flex items-center gap-4 uppercase text-[#121212] text-lg font-medium">
             <span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="9" height="15" viewBox="0 0 9 15" fill="none">
@@ -138,17 +137,17 @@
                         </form>
                     </div>
                 </div>
-                <div class="md:w-[30%] w-full">
-                    <div class="w-full flex flex-col bg-white shadow-[0_2px_4px_-2px_#919191] md:sticky top-6">
+                <div class="md:w-[30%] w-full md:block hidden">
+                    <div class="w-full flex flex-col bg-white shadow-[0_2px_4px_-2px_#919191] md:sticky md:top-24">
                         <div
                             class="w-full flex items-center h-[3.125rem] p-6 bg-gradient-to-l  from-[#CB122D] to-[#650916]  md:text-lg text-base font-bold  text-white">
                             Booking Summary
                         </div>
                         <div class="flex flex-col gap-y-6 bg-white p-6">
-                            <div class="w-full flex flex-row justify-between">
-                                <div class="text-[#A6A6A6] uppercase md:text-base text-sm font-semibold">Vehicle
+                            <div class="w-full flex flex-row">
+                                <div class="w-1/3 text-[#A6A6A6] uppercase  text-xs font-semibold">Vehicle
                                 </div>
-                                <div class="flex flex-col gap-y-1">
+                                <div class="w-2/3 flex flex-col gap-y-1">
                                     <div class="text-[#2F2F2F] font-bold text-sm">
                                         Maruti Suzuki Swift VXI
                                     </div>
@@ -157,34 +156,51 @@
                             </div>
 
                             <div class="border-t border-[#EFEFEF] pt-6">
-                                <div class="w-full flex flex-row justify-between">
-                                    <div class="text-[#A6A6A6] uppercase md:text-base text-sm font-semibold">Services
+                                <div class="w-full flex flex-row ">
+                                    <div class="w-1/3 text-[#A6A6A6] uppercase  text-xs font-semibold">Services
                                     </div>
-                                    <div class="flex flex-col gap-y-1">
-                                        <div class="text-[#2F2F2F] font-medium text-sm">
-                                            Premium Car Service
+                                    <div class="w-2/3 flex flex-col gap-y-1">
+                                        <div class="flex justify-between items-center w-full gap-2">
+                                            <div class="text-[#2F2F2F] font-medium text-sm">Premium Car
+                                                Service</div>
+                                            <div class="text-[#2F2F2F] font-bold text-sm">₹3,999</div>
                                         </div>
-                                        <div class="text-[#2F2F2F] font-medium text-sm">
-                                            Premium Car Service
+                                        <div class="flex justify-between items-center w-full gap-2">
+                                            <div class="text-[#2F2F2F] font-medium text-sm">Premium Car
+                                                Service</div>
+                                            <div class="text-[#2F2F2F] font-bold text-sm">₹2,099</div>
                                         </div>
-                                        <div class="text-[#2F2F2F] font-medium text-sm">
-                                            Premium Car Service
+                                        <div class="flex justify-between items-center w-full gap-2">
+                                            <div class="text-[#2F2F2F] font-medium text-sm">Premium Car
+                                                Service</div>
+                                            <div class="text-[#2F2F2F] font-bold text-sm">₹999</div>
                                         </div>
+
                                     </div>
-                                    <div class="flex flex-col gap-y-1">
-                                        <div class="text-[#2F2F2F] font-bold text-sm">
-                                            ₹3,999
-                                        </div>
-                                        <div class="text-[#2F2F2F] font-bold text-sm">
-                                            ₹2,099
-                                        </div>
-                                        <div class="text-[#2F2F2F] font-bold text-sm">
-                                            ₹999
-                                        </div>
-                                    </div>
+
                                 </div>
                             </div>
                             <div class="border-t border-[#EFEFEF] pt-6">
+                                <p
+                                    class="text-xs  bg-[#FF83000D] p-4 font-medium flex  gap-2 border border-[#DF7300] text-[#DF7300]">
+                                    <span>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13"
+                                            viewBox="0 0 13 13" fill="none">
+                                            <path
+                                                d="M6.41362 12.2443C9.63377 12.2443 12.2442 9.63383 12.2442 6.41368C12.2442 3.19352 9.63377 0.583069 6.41362 0.583069C3.19346 0.583069 0.583008 3.19352 0.583008 6.41368C0.583008 9.63383 3.19346 12.2443 6.41362 12.2443Z"
+                                                stroke="#DF7300" stroke-width="1.16612" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                            <path d="M6.41113 4.08112V6.41336" stroke="#DF7300" stroke-width="1.16612"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                            <path d="M6.41113 8.74518H6.41696" stroke="#DF7300" stroke-width="1.16612"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                        </svg>
+                                    </span>
+                                    This is an estimated price, Final price may vary based on your car
+                                    model and condition.
+                                </p>
+                            </div>
+                            <div class="">
                                 <div class="w-full flex flex-col gap-y-2 justify-between">
                                     <div class="w-full flex justify-between items-center gap-2">
                                         <div class="text-[#2F2F2F] text-sm font-bold">
@@ -195,24 +211,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p
-                                class="text-xs bg-[#FF83000D] p-4 font-medium flex  gap-2 border border-[#DF7300] text-[#DF7300]">
-                                <span>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 13 13"
-                                        fill="none">
-                                        <path
-                                            d="M6.41362 12.2443C9.63377 12.2443 12.2442 9.63383 12.2442 6.41368C12.2442 3.19352 9.63377 0.583069 6.41362 0.583069C3.19346 0.583069 0.583008 3.19352 0.583008 6.41368C0.583008 9.63383 3.19346 12.2443 6.41362 12.2443Z"
-                                            stroke="#DF7300" stroke-width="1.16612" stroke-linecap="round"
-                                            stroke-linejoin="round" />
-                                        <path d="M6.41113 4.08112V6.41336" stroke="#DF7300" stroke-width="1.16612"
-                                            stroke-linecap="round" stroke-linejoin="round" />
-                                        <path d="M6.41113 8.74518H6.41696" stroke="#DF7300" stroke-width="1.16612"
-                                            stroke-linecap="round" stroke-linejoin="round" />
-                                    </svg>
-                                </span>
-                                This is an estimated price, Final price may vary based on your car
-                                model and condition.
-                            </p>
+
 
                         </div>
                     </div>
